code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_33.wast
(assert_invalid
  (module (func $type-func-value-num-vs-num-after-return (result i32)
    (return (i32.const 1)) (f32.const 0)
  ))
  "type mismatch"
)